push for presentation day

--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,117 @@ body {
  background-image: url("photos/pretty-lights.jpg");
  background-repeat: no-repeat;
  background-size: cover;
+
+}
+
+h1 {
+    font-size: 35px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h2 {
+    font-size: 20px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style:italic
+}
+
+img {
+    height: 100px;
+}
+
+p  {
+    opacity: 80%
+}
+
+.bixbox {
+    /* border: solid blue; */
+    height: 2000px;
+    width: 80vh;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    jsutify-content: space-evenly;
 }
 
 .header {
-    border: solid white;
-    height: 5em;
+    /*border: solid white;*/
+    height: 4rem;
     display: flex;
+    justify-content: right;
+    padding-right: 35px;
+    padding-top: 20px;
 }
 
-.name {
-    border: solid pink;
-    text-align: center;
-    padding: 8% 50% 20% 5%;
-    font-size: 25px;
+.intro {
+    /*border: solid pink;*/
+    height: 15vh;
+    padding: 8% 50% 20% 15%;
     font-family: Verdana, Geneva, Tahoma;
     color: white;
+}
+
+.black-box-1 {
+    /* border: solid yellow; */
+    background-color: rgba(0, 0, 0, 0.596);
+    color: white;
+    text-align: center;
+    padding: 15px;
+    /* opacity: 60%; */
+    height: 300px;
+    width: 100%;
+}
+
+.selfie-box {
+    height: 300px;
+}
+
+.selfie {
+    border: solid white 2px;
+    height: 250px;
+    position: relative;
+    left: 60%;
+}
+
+.spacer {
+    height: 5vh;
+}
+
+.hover-photos {
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+
+.contact-form {
+    color: white;
+}
+
+#pizza-icon {
+    filter: invert(100%);
+    height: 40px;
+}
+
+@media screen 
+  and (min-device-width: 1024px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+
+    .black-box-1 {
+        border: solid red;
+        height: 55vh;
+    }
+    
+    .bixbox {
+        display: flex;
+        flex-direction: column;
+    }
+  
+}
+
+@media only screen 
+  and (min-device-width: 400px) 
+  and (max-device-width: 1024px) {
+ .black-box-1 {
+    border: solid pink;
+ }
 }
